--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,15 @@
 <body>
 <div class="container">
   <h1>{{ page.title }}</h1>
-  {{ content }}
+  <div class="row">
+    <div class="col-md-2 col-md-offset-3">
+    </div>
+    <div class="col-md-2">
+    </div>
+    <div class="col-md-2">
+    </div>
+
+  </div>
 </div>
 </body>
 </html>
