--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,17 +8,52 @@
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-<div class="container">
+<div class="container-fluid">
   <h1>{{ page.title }}</h1>
   <div class="row">
-    <div class="col-md-2 col-md-offset-3">
+    <div class="col-md-2 col-md-offset-2">
     </div>
     <div class="col-md-2">
     </div>
     <div class="col-md-2">
     </div>
-
+    <div class="col-md-2">
+    </div>
   </div>
+
+<div class="row">
+  <div class="col-md-8 col-md-offset-2">
+  </div>
+  <div class="col-md-12">
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-5 col-md-offset-1">
+  </div>
+  <div class="col-md-5">
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-5 col-md-offset-1">
+  </div>
+  <div class="col-md-5">
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+  </div>
+  <div class="col-md-1 col-md-offset-6">
+  </div>
+  <div class="col-md-1">
+  </div>
+  <div class="col-md-1">
+  </div>
+  <div class="col-md-1">
+  </div>
+
 </div>
 </body>
 </html>
