--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,6 @@
 </head>
 <body>
 <div class="container-fluid">
-  <h1>{{ page.title }}</h1>
   <div class="row">
     <div class="col-md-2 col-md-offset-2">
     </div>
@@ -23,13 +22,17 @@
 
 <div class="row">
   <div class="col-md-8 col-md-offset-2">
+    <h1>EMILY'S AVOCADOS</h1>
   </div>
-  <div class="col-md-12">
+  <div class="col-md-6 col-md-offset-4">
+    <img src="photos/avocado master slider.jpg">
+    <!--change the grid numbers when you have the actual picture done-->
   </div>
 </div>
 
 <div class="row">
   <div class="col-md-5 col-md-offset-1">
+    <img src="photos/avocado for jekyll 1.jpg">
   </div>
   <div class="col-md-5">
   </div>
@@ -37,6 +40,7 @@
 
 <div class="row">
   <div class="col-md-5 col-md-offset-1">
+    <img src="photos/avocado for jekyll 3.jpg">
   </div>
   <div class="col-md-5">
   </div>
