--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,14 +25,14 @@
     <h1>EMILY'S AVOCADOS</h1>
   </div>
   <div class="col-md-6 col-md-offset-4">
-    <img src="photos/avocado master slider.jpg">
+    <img src="photos/avocado_master_slider.jpg">
     <!--change the grid numbers when you have the actual picture done-->
   </div>
 </div>
 
 <div class="row">
   <div class="col-md-5 col-md-offset-1">
-    <img src="photos/avocado for jekyll 1.jpg">
+    <img src="photos/avocado_jekyll1.jpg">
   </div>
   <div class="col-md-5">
   </div>
@@ -40,7 +40,7 @@
 
 <div class="row">
   <div class="col-md-5 col-md-offset-1">
-    <img src="photos/avocado for jekyll 3.jpg">
+    <img src="photos/avocado_jekyll3.jpg">
   </div>
   <div class="col-md-5">
   </div>
