a lot has changed, dawg

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+  <!--navigation bar-->
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-2 col-md-offset-2">
@@ -19,45 +20,3 @@
     <div class="col-md-2">
     </div>
   </div>
-
-<div class="row">
-  <div class="col-md-8 col-md-offset-2">
-    <h1>EMILY'S AVOCADOS</h1>
-  </div>
-  <div class="col-md-6 col-md-offset-4">
-    <img src="photos/avocado_master_slider.jpg">
-    <!--change the grid numbers when you have the actual picture done-->
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-md-5 col-md-offset-1">
-    <img src="photos/avocado_jekyll1.jpg">
-  </div>
-  <div class="col-md-5">
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-md-5 col-md-offset-1">
-    <img src="photos/avocado_jekyll3.jpg">
-  </div>
-  <div class="col-md-5">
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-  </div>
-  <div class="col-md-1 col-md-offset-6">
-  </div>
-  <div class="col-md-1">
-  </div>
-  <div class="col-md-1">
-  </div>
-  <div class="col-md-1">
-  </div>
-
-</div>
-</body>
-</html>
