--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,11 +12,18 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-2 col-md-offset-2">
+      <p>ANATOMY</p>
     </div>
     <div class="col-md-2">
+      <p>FACTS</p>
     </div>
     <div class="col-md-2">
+      <p>RECIPES</p>
     </div>
     <div class="col-md-2">
+      <p>CONTACT</p>
     </div>
   </div>
+  {{ content }}
+</body>
+</html>
