--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,16 +12,16 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-2 col-md-offset-2">
-      <p>ANATOMY</p>
+      <p class="navbartabs">ANATOMY</p>
     </div>
     <div class="col-md-2">
-      <p>FACTS</p>
+      <p class="navbartabs">FACTS</p>
     </div>
     <div class="col-md-2">
-      <p>RECIPES</p>
+      <p class="navbartabs">RECIPES</p>
     </div>
     <div class="col-md-2">
-      <p>CONTACT</p>
+      <p class="navbartabs">CONTACT</p>
     </div>
   </div>
   {{ content }}
