--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,11 +11,11 @@
   <!--navigation bar-->
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-2 col-md-offset-2">
+    <div class="col-md-2 col-md-offset-3">
       <p class="navbartabs">about me</p>
     </div>
     <div class="col-md-2">
-      <p class="navbartabs">the super fruit/p>
+      <p class="navbartabs">the super fruit</p>
     </div>
     <div class="col-md-2">
       <p class="navbartabs">recipes</p>
