--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,5 +10,6 @@
   font-family: 'Slabo 27px', serif;
   font-size: 20px;
   text-align: center;
-  border: 1px solid #6b8e23; 
+  border: 1px solid #6b8e23;
+  background-color:  #6b8e23; 
 }
