--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 }
 
 .navbartabs {
-  font-family: 'Slabo 27px', serif,;
+  font-family: 'Slabo 27px', serif;
   color: white;
   font-size: 20px;
   text-align: center;
@@ -16,5 +16,5 @@
 }
 
 .navbartabs:hover {
-  
+
 }
