added about me page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
   <div class="row">
     <div class="col-md-2 col-md-offset-3">
       <p class="navbartabs">about me</p>
+      <a href="about.html">
     </div>
     <div class="col-md-2">
       <p class="navbartabs">the super fruit</p>
