--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,10 +17,14 @@
     </a>
     </div>
     <div class="col-md-2">
+      <a href="superfruit.html">
       <p class="navbartabs">the super fruit</p>
+    </a>
     </div>
     <div class="col-md-2">
+      <a href="recipes.html">
       <p class="navbartabs">recipes</p>
+    </a>
     </div>
   </div>
   {{ content }}
