--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
   <!--navigation bar-->
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-2 col-md-offset-3">
+    <div class="col-md-2 col-md-offset-2">
       <a href="about.html">
       <p class="navbartabs">about me</p>
     </a>
@@ -25,6 +25,10 @@
       <a href="recipes.html">
       <p class="navbartabs">recipes</p>
     </a>
+    </div>
+    <div class="col-md-2">
+        <a href="default.html">
+        <p class-"navbartabs">home</p>
     </div>
   </div>
   {{ content }}
