--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,5 +21,6 @@ text-decoration: none;
 
 .blockquote {
   font-family: 'Slabo 27px', serif;
-font-size: 45px;
+font-size: 50px;
+background-color: #6b8e23; 
 }
