--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,8 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-2 col-md-offset-2">
-      <a href="about.html">
-      <p class="navbartabs">about me</p>
+      <a href="default.html">
+      <p class="navbartabs">home</p>
     </a>
     </div>
     <div class="col-md-2">
@@ -27,8 +27,9 @@
     </a>
     </div>
     <div class="col-md-2">
-        <a href="default.html">
-        <p class-"navbartabs">home</p>
+        <a href="about.html">
+        <p class="navbartabs">about me</p>
+      </a>
     </div>
   </div>
   {{ content }}
