--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,9 +18,14 @@ a:hover {
 text-decoration: none;
 }
 
-.blockquote p {
+p .blockquote {
   font-family: 'Slabo 27px', serif;
   color: white;
   font-size: 50px;
   background-color: #6b8e23;
+}
+
+.contactme {
+  font-family: 'Amatic SC', cursive;
+  font-size: 135px;
 }
