--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ a:hover {
 text-decoration: none;
 }
 
-p .blockquote {
+.blockquote {
   font-family: 'Slabo 27px', serif;
   color: white;
   font-size: 50px;
