--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
 .header {
   font-family: 'Amatic SC', cursive;
   font-size: 135px;
+  text-align: center;
 }
 
 .navbartabs {
@@ -28,4 +29,5 @@ text-decoration: none;
 .contactme {
   font-family: 'Amatic SC', cursive;
   font-size: 135px;
+  text-align: center;
 }
