--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,8 @@
     </a>
     </div>
     <div class="col-md-2">
-        <a href="about.html">
-        <p class="navbartabs">about me</p>
+        <a href="contact.html">
+        <p class="navbartabs">contact me</p>
       </a>
     </div>
   </div>
