--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,8 +21,11 @@ text-decoration: none;
 .blockquote {
   font-family: 'Slabo 27px', serif;
   color: white;
-  font-size: 40px;
+  font-size: 35px;
   background-color: #6b8e23;
+}
+#blockquote {
+  background-color: #6b8e23; 
 }
 
 .contactme {
