--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
     </div>
     <div class="col-md-2">
         <a href="contact.html">
-        <p class="navbartabs">contact me</p>
+        <p class="navbartabs">about me</p>
       </a>
     </div>
   </div>
