--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ text-decoration: none;
   font-family: 'Slabo 27px', serif;
   font-size: 30px;
 }
-.recipe_header {
+.recipes_header {
   font-family: 'Amatic SC', cursive;
   font-size: 135px;
   text-align: center;
