--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-2 col-md-offset-2">
-      <a href="default.html">
+      <a href="_layouts/default.html">
       <p class="navbartabs">home</p>
     </a>
     </div>
