--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <!--navigation bar-->
-<div class="container-fluid">
+<div class="container">
   <div class="row">
     <div class="col-md-2 col-md-offset-2">
       <a href="http://emmysmed.github.io">
