--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,5 +72,7 @@ text-decoration: none;
 .recipe1_header {
   font-family: 'Slabo 27px', serif;
   font-size: 25px;
-  color:  #6b8e23;
+}
+#recipe1block {
+  background-color: #6b8e23;
 }
