--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,6 +49,7 @@ text-decoration: none;
 .recipes {
   font-family: 'Slabo 27px', serif;
   font-size: 30px;
+  padding-bottom: 25px;
 }
 .recipes_header {
   font-family: 'Amatic SC', cursive;
@@ -69,6 +70,7 @@ text-decoration: none;
 .recipe1 {
   font-size: 18px;
   color:white;
+  text-align: center;
 }
 .recipe1_header {
   font-family: 'Slabo 27px', serif;
@@ -77,5 +79,8 @@ text-decoration: none;
 }
 #recipe1block {
   background-color: #6b8e23;
-padding: 25px;
+padding-top: 35px;
+padding-bottom: 35px;
+padding-left: 25px;
+padding-right:25px;
 }
