--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,9 @@
 </head>
 <body>
   <!--navigation bar-->
-<div class="container">
+<div class="container-fluid">
   <div class="row">
-    <div class="col-md-2 col-md-offset-2">
+    <div class="col-md-2 col-md-offset-1">
       <a href="http://emmysmed.github.io">
       <p class="navbartabs">home</p>
     </a>
