--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,22 +11,22 @@
   <!--navigation bar-->
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-3">
+    <div class="col-md-2 col-md-offset-2">
       <a href="http://emmysmed.github.io">
       <p class="navbartabs">home</p>
     </a>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-2">
       <a href="superfruit.html">
       <p class="navbartabs">the super fruit</p>
     </a>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-2">
       <a href="recipes.html">
       <p class="navbartabs">recipes</p>
     </a>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-2">
         <a href="contact.html">
         <p class="navbartabs">about me</p>
       </a>
