--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,7 @@ text-decoration: none;
 .superfruit {
   font-family: 'Slabo 27px', serif;
   font-size: 30px;
+  padding-bottom: 30px;
 }
 .recipes {
   font-family: 'Slabo 27px', serif;
